[gd_scene load_steps=2 format=3 uid="uid://ccfv46bfbapdo"]

[ext_resource type="Script" path="res://Scripts/complete.gd" id="1_2fbw4"]

[node name="Complete" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2fbw4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.447059, 0, 1, 1)

[node name="Label" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -333.0
offset_top = -236.0
offset_right = 333.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Complete!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayAgain" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = -42.0
offset_right = 130.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
text = "Play again"

[node name="Exit" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -130.0
offset_top = 92.0
offset_right = 130.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2
text = "Exit"

[node name="Label2" type="Label" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -333.0
offset_top = -162.0
offset_right = 333.0
offset_bottom = -30.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 50
text = "Time: ??? s"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="Exit" to="." method="_on_exit_pressed"]
